개인프로젝트(2)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/NanumMyeongjoYetHangul.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Diphylleia&family=Do+Hyeon&family=Luckiest+Guy&family=Russo+One&display=swap"
+        rel="stylesheet">
 </head>
-<body>
+
+<body bgcolor="black">
+    <header>
+        <div class="pagetitle">
+            <h1>
+                <span class="pt2">M</span><span class="pt3">Y </span>
+                <span class="pt2"> F</span><span class="pt3">AVORITE </span>
+                <span class="pt2"> M</span><span class="pt3">OVIE </span>
+                <span class="pt2"> C</span><span class="pt3">OLLECTION </span>
+            </h1>
+        </div>
+    </header>
+    <form class="searching-box">
+        <div>
+            <h3>Movie Title:</h3>
+            <input> 뭐시갱이 </input>
+            <button>Search</button>
+        </div>
+    </form>
+    <section class="card-box">
+        <div class="card">
+            <img src="https://image.tmdb.org/t/p/w500/9cqNxx0GxF0bflZmeSMuL5tnGzr.jpg">
+            <p>movie title</p>
+            <p>movie short story</p>
+            <p>rating</p>
+        </div>
+        <div class="card">
+            <img scr="....">movie image
+            <p>movie title</p>
+            <p>movie short story</p>
+            <p>rating</p>
+        </div>
+        <div class="card">
+            <img scr="....">movie image
+            <p>movie title</p>
+            <p>movie short story</p>
+            <p>rating</p>
+        </div>
+        <div class="card">
+            <img scr="....">movie image
+            <p>movie title</p>
+            <p>movie short story</p>
+            <p>rating</p>
+        </div>
+        <div class="card">
+            <img scr="....">movie image
+            <p>movie title</p>
+            <p>movie short story</p>
+            <p>rating</p>
+        </div>
+        <div class="card">
+            <img scr="....">movie image
+            <p>movie title</p>
+            <p>movie short story</p>
+            <p>rating</p>
+        </div>
+
+    </section>
     <script src="./movie.js"></script>
-    두번째 깃 수정을 하고 싶어
 </body>
+
 </html>
