--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
 </head>
 
-<body bgcolor="black">
+<body background-color="black">
     <header>
         <div class="pagetitle">
             <h1>
@@ -33,42 +33,34 @@
             <button>Search</button>
         </div>
     </form>
-    <section class="card-box">
+    <section class="card-list">
         <div class="card">
-            <img src="https://image.tmdb.org/t/p/w500/9cqNxx0GxF0bflZmeSMuL5tnGzr.jpg">
-            <p>movie title</p>
-            <p>movie short story</p>
-            <p>rating</p>
+            <img src="https://image.tmdb.org/t/p/w500/9cqNxx0GxF0bflZmeSMuL5tnGzr.jpg" class="movie-image">
+            <h3 class="movie-title">The Shawshank Redemption</h3>
+            <p class="movie-overview">Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.
+            </p>
+            <p class="rating">평점: 8.704</p>
         </div>
         <div class="card">
-            <img scr="....">movie image
-            <p>movie title</p>
-            <p>movie short story</p>
-            <p>rating</p>
+            <img src="https://image.tmdb.org/t/p/w500/3bhkrj58Vtu7enYsRolD1fZdja1.jpg" class="movie-image">
+            <h3 class="movie-title">The Godfather</h3>
+            <p class="movie-overview">Spanning the years 1945 to 1955, a chronicle of the fictional Italian-American Corleone crime family. When organized crime family patriarch, Vito Corleone barely survives an attempt on his life, his youngest son, Michael steps in to take care of the would-be killers, launching a campaign of bloody revenge.
+            </p>
+            <p class="rating">평점: 8.695</p>
         </div>
         <div class="card">
-            <img scr="....">movie image
-            <p>movie title</p>
-            <p>movie short story</p>
-            <p>rating</p>
+            <img src="https://image.tmdb.org/t/p/w500/hek3koDUyRQk7FIhPXsa6mT2Zc3.jpg" class="movie-image">
+            <h3 class="movie-title">The Godfather II</h3>
+            <p class="movie-overview">In the continuing saga of the Corleone crime family, a young Vito Corleone grows up in Sicily and in 1910s New York. In the 1950s, Michael Corleone attempts to expand the family business into Las Vegas, Hollywood and Cuba.
+            </p>
+            <p class="rating">평점: 8.577</p>
         </div>
         <div class="card">
-            <img scr="....">movie image
-            <p>movie title</p>
-            <p>movie short story</p>
-            <p>rating</p>
-        </div>
-        <div class="card">
-            <img scr="....">movie image
-            <p>movie title</p>
-            <p>movie short story</p>
-            <p>rating</p>
-        </div>
-        <div class="card">
-            <img scr="....">movie image
-            <p>movie title</p>
-            <p>movie short story</p>
-            <p>rating</p>
+            <img src="https://image.tmdb.org/t/p/w500/sF1U4EUQS8YHUYjNl3pMGNIQyr0.jpg" class="movie-image">
+            <h3 class="movie-title">Schindler's List</h3>
+            <p class="movie-overview">The true story of how businessman Oskar Schindler saved over a thousand Jewish lives from the Nazis while they worked as slaves in his factory during World War II.
+            </p>
+            <p class="rating">평점: 8.567</p>
         </div>
 
     </section>
