--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Favorite movie collection</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://hangeul.pstatic.net/hangeul_static/css/NanumMyeongjoYetHangul.css" rel="stylesheet">
@@ -27,11 +27,9 @@
         </div>
     </header>
     <form class="searching-box">
-        <div>
-            <h3>Movie Title:</h3>
-            <input> 뭐시갱이 </input>
+            <label>Movie Title:</label>
+            <input placeholder="search movie title"></input>
             <button>Search</button>
-        </div>
     </form>
     <section class="card-list">
         <div class="card">
